fix: [CDS-48174]: fix text overflow, modal width (#12935)

--- a/src/modules/75-cd/components/EnvironmentsV2/EnvironmentDetails/ServiceOverrides/ServiceOverrides.module.scss
+++ b/src/modules/75-cd/components/EnvironmentsV2/EnvironmentDetails/ServiceOverrides/ServiceOverrides.module.scss
@@ -17,6 +17,7 @@
 .dialogStyles {
   min-width: 600px;
   width: auto;
+  max-width: min(1024px, calc(100vw - var(--spacing-huge)));
   .service-override-dialog {
     min-height: 450px;
   }
